--- a/portfolio/java_go/index.html
+++ b/portfolio/java_go/index.html
@@ -42,7 +42,7 @@ body::before {
             </ul>
             <p>
               <h3>Тренажер, который подстраивается под уровень студента</h3>
-<p>Знакома ли вам ситуация, когда вы сдали задачу/работу на проверку, а результатов пришлось ждать неделю, т.к. проверяющий занят? Именно так обстоят дела в большинстве очных курсов. В JavaRush вы узнаёте результаты проверки задачи меньше чем через секунду, после нажатия кнопки «Проверить».</p>
+<p>Знакома ли вам ситуация, когда вы сдали задачу/работу на проверку, а результатов пришлось ждать неделю, т.к. проверяющий занят? Именно так обстоят дела в большинстве очных курсов. В JavaRush+++ вы узнаёте результаты проверки задачи меньше чем через секунду, после нажатия кнопки «Проверить».</p>
 <p>В Интернете много хороших книг, но читая книги программистом не станешь. Чтобы стать программистом, нужно много программировать. JavaRush — это онлайн-курс обучения программированию на Java, на 80% состоящий из практики. Именно то, что нужно чтобы стать Java‑программистом.</p>
 <p>Как в нашем веке вообще можно учиться только по книгам? Такой подход был инновационным в 17 веке, но не в 21. В JavaRush используются новейшие методики, которые делают ваше обучение легче, интересней и продуктивнее: визуализация, сторитейлинг, мотивация, геймификация и еще два десятка технологий, о которых вы даже не слышали.</p>
             </p>
