--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Разработчик и автор </h3>
           <p class="fst-italic">
-            Занимаюсь веб-разработкой на Django, Flask и FastAPI. Ссылка на гGitHub: https://github.com/Kylych-dev. Работал над проектами в нескольких областях:
+            Занимаюсь веб-разработкой на Django, Flask и FastAPI. Ссылка на GitHub: <a href="https://github.com/Kylych-dev" target="_blank">https://github.com/Kylych-dev</a>. Работал над проектами в нескольких областях:
           </p>
           <div class="row">
             <div class="col-lg-6">
