--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>FinTech</strong></li>
+                <li><i class="bi bi-chevron-right"></i> <strong><a href="https://github.com/Kylych-dev/mongo_telegram_bot" target="_blank">TelegramBot with MongoDB</a></strong></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>EdTech</strong></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Big Data</strong></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Робототехника</strong></li>
