--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong><a href="https://github.com/Kylych-dev/mongo_telegram_bot" target="_blank">TelegramBot with MongoDB</a></strong></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>EdTech</strong></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Big Data</strong></li>
+                <li><i class="bi bi-chevron-right"></i> <strong><a href="https://github.com/Kylych-dev/book_exchange" target="_blank">Online Platform for exchange books.</a></strong></li>
+                <li><i class="bi bi-chevron-right"></i> <strong><a href="https://github.com/Kylych-dev/parsing_eccomerce_site" target="_blank">Parsing eccommerce websites</a></strong></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Робототехника</strong></li>
               </ul>
             </div>
