--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
         <div class="col-lg-3 col-md-6">
           <div class="count-box">
             <i class="bi bi-emoji-smile"></i>
-            <span data-purecounter-start="0" data-purecounter-end="12" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Лет опыта</p>
+            <span data-purecounter-start="0" data-purecounter-end="2" data-purecounter-duration="1" class="purecounter"></span>
+            <p>Года опыта</p>
           </div>
         </div>
 
@@ -161,9 +161,9 @@
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">Английский язык <i class="val">100%</i></span>
+            <span class="skill">Английский язык <i class="val">60%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
