--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Разработчик и автор </h3>
           <p class="fst-italic">
-            Занимаюсь веб-разработкой на Django, Flask и FastAPI. Ссылка на GitHub: <a href="https://github.com/Kylych-dev" target="_blank">https://github.com/Kylych-dev</a>. Работал над проектами в нескольких областях:
+            Занимаюсь веб-разработкой на Django, Flask и FastAPI. Ссылка на GitHub: 
+            <a href="https://github.com/Kylych-dev" target="_blank">https://github.com/Kylych-dev</a>. 
+            Работал над такими проектами как:
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -81,20 +83,18 @@
                 <li><i class="bi bi-chevron-right"></i> <strong><a href="https://github.com/Kylych-dev/mongo_telegram_bot" target="_blank">TelegramBot with MongoDB</a></strong></li>
                 <li><i class="bi bi-chevron-right"></i> <strong><a href="https://github.com/Kylych-dev/book_exchange" target="_blank">Online Platform for exchange books.</a></strong></li>
                 <li><i class="bi bi-chevron-right"></i> <strong><a href="https://github.com/Kylych-dev/parsing_eccomerce_site" target="_blank">Parsing eccommerce websites</a></strong></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Робототехника</strong></li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Блокчейн</strong></li>
+                <li><i class="bi bi-chevron-right"></i> <strong><a href="https://github.com/Kylych-dev/latoken_bot" target="_blank"> </a></strong></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Нейронные сети</strong></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Криптография</strong></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Онлайн ТВ</strong></li>
               </ul>
             </div>
           </div>
           <p>
-            Есть опыт преподавания - вел курсы фуллстек-разработки на платформах БлаБлаФактори и Yandex Практикум.
+            Есть опыт преподавания - вел курсы backend-разработки на курсах программирования bootcamp.
           </p>
         </div>
       </div>
@@ -121,7 +121,7 @@
         <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
           <div class="count-box">
             <i class="bi bi-award"></i>
-            <span data-purecounter-start="0" data-purecounter-end="525" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="52" data-purecounter-duration="1" class="purecounter"></span>
             <p>Проектов</p>
           </div>
         </div>
@@ -129,7 +129,7 @@
         <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
           <div class="count-box">
             <i class="bi bi-pencil"></i>
-            <span data-purecounter-start="0" data-purecounter-end="11" data-purecounter-duration="1" class="purecounter"></span>
+            <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1" class="purecounter"></span>
             <p>Созданных курсов</p>
           </div>
         </div>
@@ -137,8 +137,8 @@
         <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
           <div class="count-box">
             <i class="bi bi-journal-richtext"></i>
-            <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Опубликованных книг</p>
+            <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="1" class="purecounter"></span>
+            <p>Прочитанных книг</p>
           </div>
         </div>
 
