--- a/index.html
+++ b/index.html
@@ -73,23 +73,23 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Разработчик и автор </h3>
           <p class="fst-italic">
-            Занимаюсь веб-разработкой на Django, Flask и FastAPI. Ссылка на GitHub: 
-            <a href="https://github.com/Kylych-dev" target="_blank">https://github.com/Kylych-dev</a>. 
+            Занимаюсь веб-разработкой на Django, Flask и FastAPI. Ссылка на GitHub: <br>
+            <a href="https://github.com/Kylych-dev" target="_blank">https://github.com/Kylych-dev</a>. <br>
             Работал над такими проектами как:
           </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong><a href="https://github.com/Kylych-dev/mongo_telegram_bot" target="_blank">TelegramBot with MongoDB</a></strong></li>
-                <li><i class="bi bi-chevron-right"></i> <strong><a href="https://github.com/Kylych-dev/book_exchange" target="_blank">Online Platform for exchange books.</a></strong></li>
-                <li><i class="bi bi-chevron-right"></i> <strong><a href="https://github.com/Kylych-dev/parsing_eccomerce_site" target="_blank">Parsing eccommerce websites</a></strong></li>
+                <li><i class="bi bi-chevron-right"></i><strong><a href="https://github.com/Kylych-dev/mongo_telegram_bot" target="_blank">TelegramBot with MongoDB</a></strong></li>
+                <li><i class="bi bi-chevron-right"></i><strong><a href="https://github.com/Kylych-dev/book_exchange" target="_blank">Online Platform for exchange books.</a></strong></li>
+                <li><i class="bi bi-chevron-right"></i><strong><a href="https://github.com/Kylych-dev/parsing_eccomerce_site" target="_blank">Parsing eccommerce websites</a></strong></li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong><a href="https://github.com/Kylych-dev/latoken_bot" target="_blank"> </a></strong></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Нейронные сети</strong></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Криптография</strong></li>
+                <li><i class="bi bi-chevron-right"></i><strong><a href="https://github.com/Kylych-dev/latoken_bot" target="_blank">Telegram Bot with ChatGPT with RAG</a></strong></li>
+                <li><i class="bi bi-chevron-right"></i><strong><a href="https://github.com/Kylych-dev/hands_microservices" target="_blank"></a>Микросервисы(Django, React, Flask)</strong></li>
+                <li><i class="bi bi-chevron-right"></i><strong>Криптография</strong></li>
               </ul>
             </div>
           </div>
@@ -168,14 +168,14 @@
           </div>
 
           <div class="progress">
-            <span class="skill">Python <i class="val">100%</i></span>
+            <span class="skill">Python <i class="val">85%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="85"></div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">Ruby <i class="val">100%</i></span>
+            <span class="skill">DB(PostgreSQL, MongoDB, MySQL, Compass) <i class="val">100%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -186,23 +186,23 @@
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">Go <i class="val">98%</i></span>
+            <span class="skill">Django Rest Framework <i class="val">75%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="75"></div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">Java <i class="val">95%</i></span>
+            <span class="skill">FastApi <i class="val">50%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="50"></div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">C++ <i class="val">90%</i></span>
+            <span class="skill">Flask <i class="val">90%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="50"></div>
             </div>
           </div>
 
