--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i><strong><a href="https://github.com/Kylych-dev/latoken_bot" target="_blank">Telegram Bot with ChatGPT with RAG</a></strong></li>
-                <li><i class="bi bi-chevron-right"></i><strong><a href="https://github.com/Kylych-dev/hands_microservices" target="_blank"></a>Микросервисы(Django, React, Flask)</strong></li>
+                <li><i class="bi bi-chevron-right"></i><strong><a href="https://github.com/Kylych-dev/hands_microservices" target="_blank">Микросервисы(Django, React, Flask)</a></strong></li>
                 <li><i class="bi bi-chevron-right"></i><strong>Криптография</strong></li>
               </ul>
             </div>
@@ -175,9 +175,9 @@
           </div>
 
           <div class="progress">
-            <span class="skill">DB(PostgreSQL, MongoDB, MySQL, Compass) <i class="val">100%</i></span>
+            <span class="skill">DB(PostgreSQL, MongoDB, MySQL, Compass) <i class="val">70%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="70"></div>
             </div>
           </div>
 
@@ -186,9 +186,9 @@
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">Django Rest Framework <i class="val">75%</i></span>
+            <span class="skill">Django Rest Framework <i class="val">80%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="75"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="80"></div>
             </div>
           </div>
 
@@ -200,7 +200,7 @@
           </div>
 
           <div class="progress">
-            <span class="skill">Flask <i class="val">90%</i></span>
+            <span class="skill">Flask <i class="val">50%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="50"></div>
             </div>
