--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <header id="header">
     <div class="container">
       <h1><a href="https://kylych-dev.github.io/">Mirbekov Kylych</a></h1>
-      <h2>Разработчик и автор <span>курсов по Django</span></h2>
+      <h2>Гений, миллиардер, филантроп, самогонщик, тракторист</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
