--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <!-- Хедер -->
   <header id="header">
     <div class="container">
-      <h1><a href="https://kylych-dev.github.io/">Mirbekov Kylych</a></h1>
+      <h1><a href="https://kylych-dev.github.io/">Mirbekov Kylych age - 30 </a></h1>
       <h2>Гений, миллиардер, филантроп, самогонщик, тракторист</h2>
 
       <nav id="navbar" class="navbar">
