--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               <ul>
                 <li><i class="bi bi-chevron-right"></i><strong><a href="https://github.com/Kylych-dev/latoken_bot" target="_blank">Telegram Bot with ChatGPT with RAG</a></strong></li>
                 <li><i class="bi bi-chevron-right"></i><strong><a href="https://github.com/Kylych-dev/hands_microservices" target="_blank">Микросервисы(Django, React, Flask)</a></strong></li>
-                <li><i class="bi bi-chevron-right"></i><strong>Криптография</strong></li>
+                <li><i class="bi bi-chevron-right"></i><strong>Торговля игровыми аккаунтами на зарубежной платформе G2G</strong></li>
               </ul>
             </div>
           </div>
