--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <img src="static/img/me.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Разработчик и автор </h3>
+          <!-- <h3>Разработчик и автор </h3> -->
           <p class="fst-italic">
             Занимаюсь веб-разработкой на Django, Flask и FastAPI. Ссылка на GitHub: <br>
             <a href="https://github.com/Kylych-dev" target="_blank">https://github.com/Kylych-dev</a>. <br>
