--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
     <div class="container">
       <div class="section-title">
         <h2>Портфолио</h2>
-        <p>Завершенные проекты</p>
+        <p>проекты на github</p>
       </div>
     <div class="row">
        
@@ -318,8 +318,8 @@
          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-rocket"></i></div>
-            <h4><a href="/portfolio/payment_system/"data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox">TransparentPay</a></h4>
-            <p>Платежная система для прозрачного финансирования благотворительных проектов</p>
+            <h4><a href="/portfolio/payment_system/"data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox">Salary Report</a></h4>
+            <p>Телеграм бот который предостовлял отёт о заработной плате сотрудника по указанной дате</p>
           </div>
         </div>
        <!-- вывод карточек -->
@@ -327,15 +327,15 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-message-detail"></i></div>
             <h4><a href="/portfolio/java_go/"data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox">Адаптивный тренажер</a></h4>
-            <p>Платформа для интерактивной и адаптивной тренировки навыков программирования на Java и Go</p>
+            <p>Телеграм бот подключенным к ChatGPT, отвечал на вопросы, ответы которые брал со стороннего сайта</p>
           </div>
         </div>
        <!-- вывод карточек -->
          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-file"></i></div>
-            <h4><a href="/portfolio/blockchain/"data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox">Блокчейн</a></h4>
-            <p>Проекты на Ethereum блокчейне, NFT-платформы, распределенные приложения</p>
+            <h4><a href="/portfolio/blockchain/"data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox">Spotify</a></h4>
+            <p>составление списка песен в формате excel, с моего плейлиста</p>
           </div>
         </div>
        <!-- вывод карточек -->
@@ -343,7 +343,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-highlight"></i></div>
             <h4><a href="/portfolio/my_books/"data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox">Книги</a></h4>
-            <p>Опубликованные книги по Python, алгоритмам, веб-разработке на Django и Flask</p>
+            <p>Электронная библиотека позволяет делится книгами между пользотелями</p>
           </div>
         </div>
        <!-- вывод карточек -->
