--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
             <i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>
-            <h3>Аналитика</h3>
+            <h3>FastAPI</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
@@ -282,7 +282,7 @@
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-computer-line" style="color: #b20969;"></i>
-            <h3>Фронтенд</h3>
+            <h3>Домашний сервер</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
@@ -319,7 +319,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-rocket"></i></div>
             <h4><a href="/portfolio/payment_system/"data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox">Salary Report</a></h4>
-            <p>Телеграм бот который предостовлял отёт о заработной плате сотрудника по указанной дате</p>
+            <p>Телеграм бот который предостовлял отёт о заработной плате сотрудника по указанной дате (MongoDB)</p>
           </div>
         </div>
        <!-- вывод карточек -->
