--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-highlight"></i></div>
             <h4><a href="/portfolio/my_books/"data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox">Книги</a></h4>
-            <p>Электронная библиотека позволяет делится книгами между пользотелями</p>
+            <p>Электронная библиотека позволяет делиться книгами между пользотелями</p>
           </div>
         </div>
        <!-- вывод карточек -->
